--- a/app/views/new/accredited-body.html
+++ b/app/views/new/accredited-body.html
@@ -30,7 +30,7 @@
             or: true
           },
           {
-            name: 'An new accredited body you’re working with',
+            name: 'A new accredited body you’re working with',
             more: otherAccreditedProviderFields
           }
           ), options) %}
