Fix vacancies back link

--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% set title = 'Edit vacancies' %}
 {% block pageTitle %}{{ title }}{% endblock %}
-{% block backLink %}{{ macros.backLink() }}{% endblock %}
+{% block backLink %}{{ macros.backLink('/courses') }}{% endblock %}
 
 {% block content %}
   {% set table %}
