Add region flow documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -8,6 +8,15 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h2 class="govuk-heading-m">February 2019</h2>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/new-training-location-region">Add training location wizard: Region</a>
+      </h3>
+      <p>
+        Add a region or area, rather than a school or university.
+      </p>
+
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
