--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -58,7 +58,7 @@
           {% for school in schools %}
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">
-              <a href="/new-location/{{ school.code }}/edit" class="govuk-!-font-weight-bold">{{ school.name }}</a>
+              <a href="/location/{{ school.code }}" class="govuk-!-font-weight-bold">{{ school.name }}</a>
             </td>
           </tr>
           {% endfor %}
@@ -66,7 +66,7 @@
       </table>
 
       <p class="add-top-margin">
-        <a href="/new-location/start" class="govuk-button">Add a new training location</a>
+        <a href="/location/start" class="govuk-button">Add a new training location</a>
       </p>
     </div>
   </div>
