--- a/app/views/location.html
+++ b/app/views/location.html
@@ -34,6 +34,20 @@
       {{ macros.textbox(code + '-county', 'County', null, 'form-control', null, errors) }}
       {{ macros.textbox(code + '-postcode', 'Postcode', null, 'form-control-small', null, errors) }}
 
+      {{ macros.select(code + '-ucas-region', 'Region of UK', [
+        { name: 'London' },
+        { name: 'South East' },
+        { name: 'South West' },
+        { name: 'Wales' },
+        { name: 'West Midlands' },
+        { name: 'East Midlands' },
+        { name: 'Eastern' },
+        { name: 'North West' },
+        { name: 'Yorkshire and the Humber' },
+        { name: 'North East' },
+        { name: 'Scotland' }
+      ])}}
+
       {% if isNew %}
         <input type="submit" class="govuk-button" value="Save" />
       {% else %}
