Add more regions

--- a/app/views/location.html
+++ b/app/views/location.html
@@ -45,7 +45,9 @@
         { name: 'North West' },
         { name: 'Yorkshire and the Humber' },
         { name: 'North East' },
-        { name: 'Scotland' }
+        { name: 'Scotland' },
+        { name: 'Northern Ireland' },
+        { name: 'No region' }
       ])}}
 
       {% if isNew %}
