Document MVP add training location

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">February 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/mvp-add-location">Minimum viable Add training location</a>
+      </h3>
+      <p>
+        A replication of what’s available on UCAS. For if we don’t have time to build school autocompletes and other features, with everything else.
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-training-location-region">Add training location wizard: Region</a>
       </h3>
       <p>
