Document what live autocomplete must do
Clarify what the prototype doesn't do

--- a/app/views/history/schools-autocomplete/index.html
+++ b/app/views/history/schools-autocomplete/index.html
@@ -47,6 +47,12 @@
         <li>punctuation is ignored</li>
         <li>30 results show, rather than 10</li>
       </ul>
+
+      <p>While out of scope for a prototype, the live version of this must be able to handle fuzzy matching, for example:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>starting a search with St Mary’s, then qualifying it with London or the beginning of a postcode (eg BN1), should show all matching schools in London or that area</li>
+        <li>common alternatives must be considered, eg CofE, C of E, CE, Church of England</li>
+      </ul>
     </div>
   </div>
 
