Link to research on locations

--- a/app/views/history/new-training-location-region/index.html
+++ b/app/views/history/new-training-location-region/index.html
@@ -24,6 +24,13 @@
         <li>I don’t know which schools to list</li>
         <li>Will candidates see these schools?</li>
       </ul>
+
+      <h2 class="govuk-heading-l">User research</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://lookback.io/watch/XkCjbzaEZNPrEnNcp?t=32m54.07s">Gateway Alliance</a> (didn’t test the design, but would use regions)</li>
+        <li><a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx">University of Huddersfield</a></li>
+        <li><a href="https://lookback.io/watch/iviAKDMGPxMK68voe">The Royal Borough Teaching School Alliance</a></li>
+      </ul>
     </div>
   </div>
 
