--- a/app/views/history/new-training-location/index.html
+++ b/app/views/history/new-training-location/index.html
@@ -27,6 +27,10 @@
         <li><a href="https://lookback.io/watch/oDwREDkfjwjW5SpCi">Canterbury Christ Church University</a></li>
         <li><a href="https://lookback.io/watch/vw6eDzqmL4s24rR2Y">East of England Teacher Training</a> (a SCITT)</li>
         <li><a href="https://lookback.io/watch/qD9xw5pLPFuYHvevH">Doncaster ITT Partnership</a></li>
+        <li><a href="https://lookback.io/watch/XkCjbzaEZNPrEnNcp">Gateway Alliance</a></li>
+        <li><a href="https://lookback.io/watch/3FQ5u2nh8JRFJLtGF">Claremont Primary School</a></li>
+        <li><a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx">University of Huddersfield</a></li>
+        <li><a href="https://lookback.io/watch/iviAKDMGPxMK68voe">The Royal Borough Teaching School Alliance</a></li>
       </ul>
     </div>
   </div>
