Add notes on location research

--- a/app/views/history/mvp-add-location/index.html
+++ b/app/views/history/mvp-add-location/index.html
@@ -11,6 +11,8 @@
       <p>A much simplified training location flow. It replicates what is available on UCAS, without any extras.</p>
 
       <p>This design represents a baseline we could build first. We’d then iterate towards the training location wizards, adding a <a href="/history/schools-autocomplete">school autocomplete</a>, <a href="/history/new-training-location">then different types of location</a> along with <a href="/history/new-training-location-region">regions or areas</a>.</p>
+
+      <p>We’d also avoid having to categorise existing locations into types, though doing this at rollover might be the only appropriate time.</p>
     </div>
   </div>
 
