--- a/app/views/history/schools-autocomplete/index.html
+++ b/app/views/history/schools-autocomplete/index.html
@@ -26,9 +26,9 @@
 
       <p>This allows searching for schools by each of these properties (eg all schools in ‘BN1’). The text is also necessary as a differentiator when choosing a school with a common name – for example St Mary’s Catholic Primary School.</p>
 
-      <h2 class="govuk-heading-l">User research</h2>
+      <h2 class="govuk-heading-l" id="user-research">User research</h2>
 
-      <p>We’ve begun testing this pattern as part of the UCAS Transition work. It is being used in the "add training location" flow.</p>
+      <p>We’ve begun testing this pattern as part of the UCAS Transition work. It is being used in the <a href="/history/new-training-location#user-research">Add training location flow</a>.</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/oDwREDkfjwjW5SpCi">Canterbury Christ Church University</a></li>
