Link to FE new course research

--- a/app/views/history/new-further-education-course/index.html
+++ b/app/views/history/new-further-education-course/index.html
@@ -32,6 +32,13 @@
         <li>full time or part time</li>
         <li>course start date</li>
       </ul>
+
+      <h2 class="govuk-heading-l">User research</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://lookback.io/watch/oDwREDkfjwjW5SpCi?t=18m55.28s">Canterbury Christ Church University</a></li>
+        <li><a href="https://lookback.io/watch/uCv5RfwkKAcyad3fJ?t=7m16.01s">Sheffield Hallam University</a></li>
+        <li><a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx?t=2m6.58s">University of Huddersfield</a></li>
+      </ul>
     </div>
   </div>
 
