--- a/app/views/history/new-further-education-course/index.html
+++ b/app/views/history/new-further-education-course/index.html
@@ -39,6 +39,27 @@
         <li><a href="https://lookback.io/watch/uCv5RfwkKAcyad3fJ?t=7m16.01s">Sheffield Hallam University</a></li>
         <li><a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx?t=2m6.58s">University of Huddersfield</a></li>
       </ul>
+
+      <h3 class="govuk-heading-m">Expertise</h3>
+      <p>Not everyone who enters a further education course knows exactly what their FE courses offer. Some providers weren’t sure if their courses offered QTS or not (they don’t). They have contacts in their organisation who can give more detail.</p>
+
+      <h3 class="govuk-heading-m">Titles</h3>
+      <p>FE course titles are vague: Lifelong Learning, Further Education, FE Teacher Training. One provider explained that their FE course represented many possible subjects, from business to beauty, and that which subject would be taken would be discussed at interview.</p>
+
+      <h3 class="govuk-heading-m">Pre-service and post-service</h3>
+      <p>We’d seen these terms in some courses. We weren’t sure what they meant.</p>
+
+      <p>Post-service, or in-service is aimed at people already working or volunteering in a school as it does not include school placements. (<a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx?t=5m4s">video</a>)</p>
+
+      <p>Pre-service courses will include work placements.</p>
+
+      <h3 class="govuk-heading-m">Is Find right for FE courses?</h3>
+
+      <p>Should FE course be with all the others? “Yes - the application process is the same as those that result in QTS and managed in the same way. They’re getting the same treatment as someone who is applying for QTS” (<a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx?t=12m36.1s">video</a>)</p>
+
+      <p>How school placements work should be renamed to How placements work for FE courses, placements aren’t in schools.</p>
+
+      <p>As courses aren’t tied to allocations, the opening date for applications is arbitrary. “because this course is not subject to allocation restrictions, we know the course is going to run.” (<a href="https://lookback.io/watch/pWYBvEpr8YfeF7pAx?t=15m25.7s">video</a>)</p>
     </div>
   </div>
 
