--- a/app/views/new-location/confirm.html
+++ b/app/views/new-location/confirm.html
@@ -10,7 +10,7 @@
         <h1 class="govuk-heading-xl add-double-bottom-margin">
           {{ title }}
         </h1>
-        <dl class="app-check-your-answers app-check-your-answers--short govuk-!-margin-top-9 govuk-!-margin-bottom-9">
+        <dl class="govuk-summary-list govuk-!-margin-top-9 govuk-!-margin-bottom-9">
           {% include "new-location/_answers.html" %}
         </dl>
       </div>
