--- a/app/views/course-not-running.html
+++ b/app/views/course-not-running.html
@@ -54,34 +54,25 @@
     </div>
   </div>
 
-
-  <div class="govuk-grid-row add-top-margin">
+  <!-- <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
-      <div class="course-parts course-parts--large">
-        <ul class="course-parts-items">
-          <li class="course-parts-item">
-            <h3 class="course-part-task">Training locations</h3>
+      <h3 class="course-part-task">Training locations</h3>
 
-            <div style="clear: left; padding-top: 20px">
-            {% for school in course.schools %}
-            <h4 class="govuk-heading-s add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
-            <dl class="aligned add-top-margin add-double-bottom-margin">
-              <dt>Address:</dt>
-              <dd>{{ school.address }}</dd>
-              <dt>Status:</dt>
-              <dd>Discontinued</dd>
-              <dt>Vacancies:</dt>
-              <dd>Full time vacancies</dd>
-              <dt>Apply from:</dt>
-              <dd>October 2018</dd>
-            </dl>
-            {% endfor %}
-            </div>
-          </li>
-        </ul>
+      <div style="clear: left; padding-top: 20px">
+      {% for school in course.schools %}
+      <h4 class="govuk-heading-s add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
+      <dl class="aligned add-top-margin add-double-bottom-margin">
+        <dt>Address:</dt>
+        <dd>{{ school.address }}</dd>
+        <dt>Status:</dt>
+        <dd>Discontinued</dd>
+        <dt>Vacancies:</dt>
+        <dd>Full time vacancies</dd>
+        <dt>Apply from:</dt>
+        <dd>October 2018</dd>
+      </dl>
+      {% endfor %}
       </div>
     </div>
-  </div>
-
-
+  </div> -->
 {% endblock %}
