--- a/app/views/course.html
+++ b/app/views/course.html
@@ -68,114 +68,102 @@
 
   <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
-      <div class="course-parts course-parts--large">
-        <ul class="course-parts-items">
-          <li class="course-parts-item">
-            {% if course.level == 'Further education' %}
-              <h3 class="course-part-task">
-                <a class="course-part-task-action" href="/new/{{ course.programmeCode }}/further/edit">
-                  Course information
-                </a>
-              </h3>
-              <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
-                {% include "new/further/_answers.html" %}
-              </dl>
-            {% else %}
-              <h3 class="course-part-task">
-                <a class="course-part-task-action" href="/new/{{ course.programmeCode }}/edit">
-                  Course information
-                </a>
-              </h3>
-              <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
-                {% include "new/_answers.html" %}
-              </dl>
-            {% endif %}
-          </li>
-          <li class="course-parts-item">
-            <h3 class="course-part-task">
-              <a class="course-part-task-action" href="{{ coursePath }}/about-this-course">About this course</a>
-            </h3>
+      {% if course.level == 'Further education' %}
+        <h3 class="govuk-heading-27 remove-top-margin">
+          <a href="/new/{{ course.programmeCode }}/further/edit">
+            Course information
+          </a>
+        </h3>
+        <dl class="govuk-summary-list govuk-summary-list--short">
+          {% include "new/further/_answers.html" %}
+        </dl>
+      {% else %}
+        <h3 class="govuk-heading-27 remove-top-margin">
+          <a href="/new/{{ course.programmeCode }}/edit">
+            Course information
+          </a>
+        </h3>
+        <dl class="govuk-summary-list govuk-summary-list--short govuk-summary-list--short">
+          {% include "new/_answers.html" %}
+        </dl>
+      {% endif %}
 
-            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
-              {{ macros.coursePart(course.programmeCode + '-about-this-course', 'About this course', errors, coursePath) }}
-              {{ macros.coursePart(course.programmeCode + '-interview-process', 'Interview process (optional)') }}
-              {{ macros.coursePart(course.programmeCode + '-placement-school-policy', 'How school placements work', errors, coursePath) }}
-            </dl>
-          </li>
-          <li class="course-parts-item">
-            <h3 class="course-part-task">
-              <a class="course-part-task-action" href="{{ coursePath }}/fees-and-length">
-                Course length and {% if course.salaried %}salary{% else %}fees{% endif %}
-              </a>
-            </h3>
-            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
-              {% if data[course.programmeCode + '-duration'] == 'Other' %}
-                {{ macros.coursePart(course.programmeCode + '-duration-other', 'Course length', errors, coursePath) }}
-              {% else %}
-                {{ macros.coursePart(course.programmeCode + '-duration', 'Course length', errors, coursePath) }}
-              {% endif %}
-              {% if course.salaried %}
-                {{ macros.coursePart(course.programmeCode + '-salary-details', 'Salary', errors, coursePath) }}
-              {% else %}
-                {{ macros.feesCoursePart(course.programmeCode + '-fee', 'Fee for UK and EU students', errors, coursePath) }}
-                {{ macros.feesCoursePart(course.programmeCode + '-fee-international', 'Fee for international students (optional)') }}
-                {{ macros.coursePart(course.programmeCode + '-fee-details', 'Fee details (optional)') }}
-                {{ macros.coursePart(course.programmeCode + '-financial-support', 'Financial support you offer (optional)') }}
-              {% endif %}
-            </dl>
-          </li>
-          <li class="course-parts-item">
-            <h3 class="course-part-task">
-              <a class="course-part-task-action" href="{{ coursePath }}/requirements">
-                Requirements and eligibility
-              </a>
-            </h3>
+      <h3 class="govuk-heading-27">
+        <a href="{{ coursePath }}/about-this-course">About this course</a>
+      </h3>
+      <dl class="govuk-summary-list govuk-summary-list--short">
+        {{ macros.coursePart(course.programmeCode + '-about-this-course', 'About this course', errors, coursePath) }}
+        {{ macros.coursePart(course.programmeCode + '-interview-process', 'Interview process (optional)') }}
+        {{ macros.coursePart(course.programmeCode + '-placement-school-policy', 'How school placements work', errors, coursePath) }}
+      </dl>
 
-            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
-              {{ macros.coursePart(course.programmeCode + '-qualifications-required', 'Qualifications needed', errors, coursePath) }}
-              {{ macros.coursePart(course.programmeCode + '-personal-qualities', 'Personal qualities (optional)') }}
-              {{ macros.coursePart(course.programmeCode + '-other-requirements', 'Other requirements (optional)') }}
-            </dl>
-          </li>
-          <!-- <li class="course-parts-item">
-            <h3 class="course-part-task">Training locations</h3>
+      <h3 class="govuk-heading-27">
+        <a href="{{ coursePath }}/fees-and-length">
+          Course length and {% if course.salaried %}salary{% else %}fees{% endif %}
+        </a>
+      </h3>
+      <dl class="govuk-summary-list govuk-summary-list--short">
+        {% if data[course.programmeCode + '-duration'] == 'Other' %}
+          {{ macros.coursePart(course.programmeCode + '-duration-other', 'Course length', errors, coursePath) }}
+        {% else %}
+          {{ macros.coursePart(course.programmeCode + '-duration', 'Course length', errors, coursePath) }}
+        {% endif %}
+        {% if course.salaried %}
+          {{ macros.coursePart(course.programmeCode + '-salary-details', 'Salary', errors, coursePath) }}
+        {% else %}
+          {{ macros.feesCoursePart(course.programmeCode + '-fee', 'Fee for UK and EU students', errors, coursePath) }}
+          {{ macros.feesCoursePart(course.programmeCode + '-fee-international', 'Fee for international students (optional)') }}
+          {{ macros.coursePart(course.programmeCode + '-fee-details', 'Fee details (optional)') }}
+          {{ macros.coursePart(course.programmeCode + '-financial-support', 'Financial support you offer (optional)') }}
+        {% endif %}
+      </dl>
 
-            <div style="clear: left; padding-top: 20px">
-              {% for school in course.schools %}
-              <h4 class="govuk-heading-s add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
-              <dl class="aligned add-top-margin add-double-bottom-margin">
-                <dt>Address:</dt>
-                <dd>{{ school.address }}</dd>
-                <dt>Status:</dt>
-                <dd>Running</dd>
-                <dt>Vacancies:</dt>
-                <dd>Full time vacancies</dd>
-                <dt>Apply from:</dt>
-                <dd>October 2018</dd>
-              </dl>
-              {% endfor %}
+      <h3 class="govuk-heading-27">
+        <a href="{{ coursePath }}/requirements">
+          Requirements and eligibility
+        </a>
+      </h3>
+      <dl class="govuk-summary-list govuk-summary-list--short">
+        {{ macros.coursePart(course.programmeCode + '-qualifications-required', 'Qualifications needed', errors, coursePath) }}
+        {{ macros.coursePart(course.programmeCode + '-personal-qualities', 'Personal qualities (optional)') }}
+        {{ macros.coursePart(course.programmeCode + '-other-requirements', 'Other requirements (optional)') }}
+      </dl>
+    <!--
+      <h3 class="govuk-heading-27">Training locations</h3>
 
-              {% set detailsText %}
-                <p>These locations won’t appear on the page for this course and candidates won’t be able apply for them.</p>
+      <div style="clear: left; padding-top: 20px">
+        {% for school in course.schools %}
+        <h4 class="govuk-heading-s add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
+        <dl class="aligned add-top-margin add-double-bottom-margin">
+          <dt>Address:</dt>
+          <dd>{{ school.address }}</dd>
+          <dt>Status:</dt>
+          <dd>Running</dd>
+          <dt>Vacancies:</dt>
+          <dd>Full time vacancies</dd>
+          <dt>Apply from:</dt>
+          <dd>October 2018</dd>
+        </dl>
+        {% endfor %}
 
-                {% for school in course.schools %}
-                <h4 class="govuk-heading-s add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
-                <dl class="aligned add-top-margin add-double-bottom-margin">
-                  <dt>Address:</dt>
-                  <dd>{{ school.address }}</dd>
-                  <dt>Status:</dt>
-                  <dd>Suspended</dd>
-                </dl>
-                {% endfor %}
-              {% endset %}
-              {{ govukDetails({
-                summaryText: "There are 4 suspended or discontinued training locations for this course",
-                text: detailsText | safe
-              }) }}
-            </div>
-          </li> -->
-        </ul>
-      </div>
+        {% set detailsText %}
+          <p>These locations won’t appear on the page for this course and candidates won’t be able apply for them.</p>
+
+          {% for school in course.schools %}
+          <h4 class="govuk-heading-s add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
+          <dl class="aligned add-top-margin add-double-bottom-margin">
+            <dt>Address:</dt>
+            <dd>{{ school.address }}</dd>
+            <dt>Status:</dt>
+            <dd>Suspended</dd>
+          </dl>
+          {% endfor %}
+        {% endset %}
+        {{ govukDetails({
+          summaryText: "There are 4 suspended or discontinued training locations for this course",
+          text: detailsText | safe
+        }) }}
+      </div>-->
     </div>
     <div class="govuk-grid-column-one-third">
       {{ macros.coursePublish(publishState, data[course.programmeCode + '-published-before'], previewLink, publishLink) }}
