--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -1,23 +1,23 @@
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Level
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-phase'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/phase?change=phase">
       Change<span class="govuk-visually-hidden"> phase</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     SEND
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% if data[code + '-sen'] %}
       Yes
     {% else %}
@@ -25,25 +25,25 @@
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/phase?change=phase">
       Change<span class="govuk-visually-hidden"> SEND</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Subject
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-subject'] }}
     {% if data[code + '-second-subject'] %}
       <br />{{ data[code + '-second-subject'] }}
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/subject?change=subject">
       Change<span class="govuk-visually-hidden"> subject</span>
     </a>
@@ -51,11 +51,11 @@
   {% endif %}
 </div>
 {% if data[code + '-subject'] == 'Modern languages' %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Languages
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% if isArray(data[code + '-languages']) %}
       {{ data[code + '-languages'].join('<br />') | safe }}
     {% else %}
@@ -63,7 +63,7 @@
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/languages?change=languages">
       Change<span class="govuk-visually-hidden"> languages</span>
     </a>
@@ -71,15 +71,15 @@
   {% endif %}
 </div>
 {% endif %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Outcome
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-outcome'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/outcome?change=outcome">
       Change<span class="govuk-visually-hidden"> outcome</span>
     </a>
@@ -87,15 +87,15 @@
   {% endif %}
 </div>
 {% if data['new-course']['include-fee-or-salary'] %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Fee or salary
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-type'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/funding?change=funding">
       Change<span class="govuk-visually-hidden"> fee or salary</span>
     </a>
@@ -103,26 +103,26 @@
   {% endif %}
 </div>
 {% endif %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Full or part time
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-full-part'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/full-time-part-time?change=full-time-part-time">
       Change<span class="govuk-visually-hidden"> full time or part time</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Training locations
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% if isArray(data[code + '-locations']) %}
       {{ data[code + '-locations'] | join('<br>') | safe }}
     {% elseif data[code + '-locations'] %}
@@ -132,7 +132,7 @@
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-    <dd class="app-check-your-answers__change">
+    <dd class="govuk-summary-list__actions">
       {% if data['schools'].length > 1 and data[code + '-locations'] %}
       <a href="/new/{{ code }}/training-locations?change=training-locations">
         Change<span class="govuk-visually-hidden"> training locations</span>
@@ -142,15 +142,15 @@
   {% endif %}
 </div>
 {% if data['new-course']['include-accredited'] %}
-  <div class="app-check-your-answers__contents">
-    <dt class="app-check-your-answers__question">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Accredited body
     </dt>
-    <dd class="app-check-your-answers__answer">
+    <dd class="govuk-summary-list__value">
       {{ data[code + '-new-accredited-body'] or data[code + '-accredited-body'] }}
     </dd>
     {% if showChangeLinks %}
-    <dd class="app-check-your-answers__change">
+    <dd class="govuk-summary-list__actions">
       <a href="/new/{{ code }}/accredited-body?change=accredited-body">
         Change<span class="govuk-visually-hidden"> accredited body</span>
       </a>
@@ -158,11 +158,11 @@
     {% endif %}
   </div>
 {% endif %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Applications open
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% if data[code + '-applications-open'] == 'On a specific date' %}
       On {{ data[code + '-applications-open-date-day'] }}-{{ data[code + '-applications-open-date-month'] }}-{{ data[code + '-applications-open-date-year'] }}
     {% elseif data[code + '-applications-open'] == 'When I publish the course' %}
@@ -172,18 +172,18 @@
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/applications-open?change=applications-open">
       Change<span class="govuk-visually-hidden"> start date</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     UCAS Apply setting
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% set expansion %}
       <p class="govuk-body-s">Applicants will need a minimum GCSE grade of C (or 4), or an equivalent,&nbsp;in:</p>
       <ul class="govuk-list govuk-list--bullet govuk-body-s">
@@ -218,22 +218,22 @@
     }) }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/eligibility?change=eligibility">
       Change<span class="govuk-visually-hidden"> minimum requirements</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Course starts
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-start-date'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/start-date?change=start-date">
       Change<span class="govuk-visually-hidden"> start date</span>
     </a>
@@ -241,11 +241,11 @@
   {% endif %}
 </div>
 {% if showTitleAndDescription %}
-  <div class="app-check-your-answers__contents">
-    <dt class="app-check-your-answers__question">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Title
     </dt>
-    <dd class="app-check-your-answers__answer">
+    <dd class="govuk-summary-list__value">
       {% if data[code + '-change-title'] == 'Yes, that’s correct' or not data[code + '-change-title']  %}
         {{ data[code + '-generated-title'] }}
       {% else %}
@@ -253,33 +253,33 @@
       {% endif %}
     </dd>
     {% if showChangeLinks %}
-    <dd class="app-check-your-answers__change">
+    <dd class="govuk-summary-list__actions">
       <a href="/new/{{ code }}/title?change=title">
         Change<span class="govuk-visually-hidden"> title</span>
       </a>
     </dd>
     {% endif %}
   </div>
-  <div class="app-check-your-answers__contents">
-    <dt class="app-check-your-answers__question">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Description
     </dt>
-    <dd class="app-check-your-answers__answer">
+    <dd class="govuk-summary-list__value">
       {{ courseOffered }}
     </dd>
     {% if showChangeLinks %}
-    <dd class="app-check-your-answers__change"></dd>
+    <dd class="govuk-summary-list__actions"></dd>
     {% endif %}
   </div>
-  <div class="app-check-your-answers__contents">
-    <dt class="app-check-your-answers__question">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Course code
     </dt>
-    <dd class="app-check-your-answers__answer">
+    <dd class="govuk-summary-list__value">
       {{ code }}
     </dd>
     {% if showChangeLinks %}
-    <dd class="app-check-your-answers__change"></dd>
+    <dd class="govuk-summary-list__actions"></dd>
     {% endif %}
   </div>
 {% endif %}
