--- a/app/views/new/further/_answers.html
+++ b/app/views/new/further/_answers.html
@@ -1,23 +1,23 @@
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Level
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-phase'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/phase?change=phase">
       Change<span class="govuk-visually-hidden"> phase</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     SEND
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% if data[code + '-sen'] %}
       Yes
     {% else %}
@@ -25,7 +25,7 @@
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/phase?change=phase">
       Change<span class="govuk-visually-hidden"> SEND</span>
     </a>
@@ -33,15 +33,15 @@
   {% endif %}
 </div>
 {% if showTitleAndDescription %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Title
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-fe-title'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/further/title?change=title">
       Change<span class="govuk-visually-hidden"> title</span>
     </a>
@@ -49,30 +49,30 @@
   {% endif %}
 </div>
 {% endif %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Outcome
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-outcome'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/further/outcome?change=outcome">
       Change<span class="govuk-visually-hidden"> outcome</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Full or part time
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-full-part'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/further/full-time-part-time?change=full-time-part-time">
       Change<span class="govuk-visually-hidden"> full time or part time</span>
     </a>
@@ -80,15 +80,15 @@
   {% endif %}
 </div>
 {% if data['schools'].length > 1 and data[code + '-locations'] %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Training locations
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-locations'] | join('<br>') | safe }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/further/training-locations?change=training-locations">
       Change<span class="govuk-visually-hidden"> training locations</span>
     </a>
@@ -96,11 +96,11 @@
   {% endif %}
 </div>
 {% endif %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Applications open
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {% if data[code + '-applications-open'] == 'On a specific date' %}
       On {{ data[code + '-applications-open-date-day'] }}-{{ data[code + '-applications-open-date-month'] }}-{{ data[code + '-applications-open-date-year'] }}
     {% elseif data[code + '-applications-open'] == 'When I publish the course' %}
@@ -110,22 +110,22 @@
     {% endif %}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/applications-open?change=applications-open">
       Change<span class="govuk-visually-hidden"> start date</span>
     </a>
   </dd>
   {% endif %}
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Course starts
   </dt>
-  <dd class="app-check-your-answers__answer">
+  <dd class="govuk-summary-list__value">
     {{ data[code + '-start-date'] }}
   </dd>
   {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
+  <dd class="govuk-summary-list__actions">
     <a href="/new/{{ code }}/further/start-date?change=start-date">
       Change<span class="govuk-visually-hidden"> start date</span>
     </a>
@@ -133,26 +133,26 @@
   {% endif %}
 </div>
 {% if showTitleAndDescription %}
-  <div class="app-check-your-answers__contents">
-    <dt class="app-check-your-answers__question">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Description
     </dt>
-    <dd class="app-check-your-answers__answer">
+    <dd class="govuk-summary-list__value">
       {{ courseOffered }}
     </dd>
     {% if showChangeLinks %}
-      <dd class="app-check-your-answers__change"></dd>
+      <dd class="govuk-summary-list__actions"></dd>
     {% endif %}
   </div>
-  <div class="app-check-your-answers__contents">
-    <dt class="app-check-your-answers__question">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Course code
     </dt>
-    <dd class="app-check-your-answers__answer">
+    <dd class="govuk-summary-list__value">
       {{ code }}
     </dd>
     {% if showChangeLinks %}
-      <dd class="app-check-your-answers__change"></dd>
+      <dd class="govuk-summary-list__actions"></dd>
     {% endif %}
   </div>
 {% endif %}
