Cleanup unused styles

--- a/app/views/history/publish-changes/iteration-aug-15.html
+++ b/app/views/history/publish-changes/iteration-aug-15.html
@@ -24,7 +24,7 @@
       </h2>
       <p>Fields are empty</p>
       <div class="add-double-bottom-margin status-box">
-        <span class="govuk-tag phase-tag-no-content add-bottom-margin">Empty</span>
+        <span class="govuk-tag phase-tag-no-content govuk-!-margin-bottom-4">Empty</span>
         <p>You need to complete and publish this information.</p>
         <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
         <h3 class="govuk-heading-m">Preview on a course</h3>
@@ -43,7 +43,7 @@
 
       <div class="add-double-bottom-margin status-box">
         <div class="unpublished-changes">
-          <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+          <span class="govuk-tag phase-tag-draft govuk-!-margin-bottom-4">Draft</span>
           <p>You have unpublished changes.</p>
           <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
         </div>
@@ -62,7 +62,7 @@
       <h2 class="govuk-heading-m">Published</h2>
       <p>No subsequent edits made</p>
       <div class="add-double-bottom-margin status-box">
-          <span class="govuk-tag phase-tag-published add-bottom-margin">Published</span>
+          <span class="govuk-tag phase-tag-published govuk-!-margin-bottom-4">Published</span>
           <p>Last published:<br>12 Jan 2019 by Rita Cosca</p>
       </div>
     </div>
@@ -73,7 +73,7 @@
 
       <div class="add-double-bottom-margin status-box">
         <div class="unpublished-changes">
-          <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+          <span class="govuk-tag phase-tag-draft govuk-!-margin-bottom-4">Draft</span>
           <p>You have unpublished changes.</p>
           <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
         </div>
@@ -106,7 +106,7 @@
       <p>Fields are empty</p>
 
       <div class="add-double-bottom-margin status-box">
-        <span class="govuk-tag phase-tag-no-content add-bottom-margin">Empty</span>
+        <span class="govuk-tag phase-tag-no-content govuk-!-margin-bottom-4">Empty</span>
         <p>You need to complete and publish this information.</p>
         <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
 
@@ -137,7 +137,7 @@
       <p>Edits have been made</p>
 
       <div class="add-double-bottom-margin status-box">
-        <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+        <span class="govuk-tag phase-tag-draft govuk-!-margin-bottom-4">Draft</span>
         <p>You have unpublished changes.</p>
         <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
         <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
@@ -169,7 +169,7 @@
       <p>No subsequent edits made</p>
 
       <div class="add-double-bottom-margin status-box">
-        <span class="govuk-tag phase-tag-published add-bottom-margin">Published</span>
+        <span class="govuk-tag phase-tag-published govuk-!-margin-bottom-4">Published</span>
 
         <p>Last published:<br>12 Jan 2019 by Rita Cosca</p>
         <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
@@ -187,7 +187,7 @@
       <p>Edits made after publishing</p>
 
       <div class="add-double-bottom-margin status-box">
-        <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+        <span class="govuk-tag phase-tag-draft govuk-!-margin-bottom-4">Draft</span>
         <p>You have unpublished changes.</p>
         <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
         <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
